# uz_tickets

./: .env.dist  .env.stage  .gitignore  Dockerfile  README.md  alembic.ini  compose.local.yaml  compose.override.yml  compose.prod.yml  compose.yaml  compose.yml  data.json  foo.py  main.py  pyproject.toml  r.py  simple_version.py
.github/ISSUE_TEMPLATE/: bug_report_ru.md  feature_request_ru.md
.github/workflows/: deploy.yml
api/: main.py
bot/: __main__.py  config.py  ioc.py  main.py  misc.py  states.py  utils.py
bot/common/: service.py  uow.py
bot/core/: config.py
bot/database/: db.py
bot/filters/: admin.py
bot/handlers/: __init__.py  change_admin_status.py  commands.py
bot/middlewares/: auth.py  throttling.py
bot/models/: __init__.py  base.py  channel.py  fields.py  user.py
bot/services/: user.py
bot/utils/: __init__.py
migrations/: env.py
migrations/versions/: 2025_07_06_1818-1cb9b98deb3d_initial.py  75f5c1f4b9f9_init.py
src/: parser.py  utils.py
src/api/: main.py
src/bot/: ioc.py  main.py  misc.py
src/bot/database/: db.py
src/bot/dialogs/menu/: controllers.py  dialog.py
src/bot/filters/: admin.py
src/bot/handlers/: __init__.py  change_admin_status.py  commands.py  parser.py
src/bot/middlewares/: __init__.py  throttling.py
src/bot/models/: base.py  channel.py  user.py
src/bot/services/: user.py
src/bot/utils/: __init__.py
src/parser/: data.json  data.py  loader.py  models.py  parser.py
